# MembraneModel

./: .gitignore  PROGRESS.md  README.md  initial.py  monitor.py  params.py  pyproject.toml  results.py  run_IEQ.py  run_solver.py  visualize.py  viz.py
discretization/: __init__.py
doc/exp/exp1/: README.md  exp1.md
doc/note/: IEQ_algorithm.md  IEQ_scheme_vesicle.md  ieq-bdf2-algorithm.md  model_variance.md  optimization_problem.md  quasi_newton.md  section3_experiments_zh.md
experiments/exp1/: run.py  run_stageB.py
model/: __init__.py  energy.py  fields.py
solver/: __init__.py  quasi_newton.py  woodbury.py
src/membrane/: __init__.py  diagnostics.py  initial.py  params.py
src/membrane/discretization/: grid.py
src/membrane/model/: __init__.py  auxiliary.py  constraints.py  energy.py  full.py
src/membrane/solver/: __init__.py  continuation.py  coupled.py  stepper.py  symbols.py  woodbury.py
tests/: test_full_grad.py  test_grad.py  test_spectral.py
