[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "membrane"
version = "0.1.0"
description = "IEQ phase-field solver for two-component lipid vesicles (Wang & Du 2008)"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest>=7", "matplotlib>=3.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
